--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
 // Love dynamically typed text? You're gonna love this
 // Edit these strings to see them typed on the screen:
 $strings: (
-	"Check Point is NOT the problem"
-	"Check Point Harmony Endpoint is NOT the problem"
-	"The Check Point Firewall is NOT the problem"
+	"CHECK POINT IS NOT THE ISSUE!"
+	"CHECK POINT HARMONY ENDPOINT IS NOT THE ISSUE!"
+	"THE CHECK POINT FIREWALL IS NOT THE ISSUE!"
 );
 
 // now for some timing (in seconds)
